# cafua

./: .gitignore  GEMINI.md  README.md
.gemini/: settings.json
adk-python-community-main/: master_prompt.md
refs/: master_prompt.md
refs/a2a_friend_scheduling/host_agent_adk/host/: .env
refs/ep2-ai-agent-bake-off/agents/: Makefile  pyproject.toml
refs/ep2-ai-agent-bake-off/agents/advisors_snapshot_agent/: pyproject.toml
refs/ep2-ai-agent-bake-off/agents/advisors_snapshot_agent/advisors_snapshot_agent/: .env  agent.py
refs/ep2-ai-agent-bake-off/agents/chat/: pyproject.toml
refs/ep2-ai-agent-bake-off/agents/chat/chat/: agent.py
refs/ep2-ai-agent-bake-off/agents/goals_snapshot_agent/: pyproject.toml
refs/ep2-ai-agent-bake-off/agents/goals_snapshot_agent/goals_snapshot_agent/: agent.py
refs/ep2-ai-agent-bake-off/agents/perks_snapshot_agent/: pyproject.toml
refs/ep2-ai-agent-bake-off/agents/perks_snapshot_agent/perks_snapshot_agent/: agent.py
refs/ep2-ai-agent-bake-off/agents/portfolio_snapshot_agent/: pyproject.toml
refs/ep2-ai-agent-bake-off/agents/portfolio_snapshot_agent/portfolio_snapshot_agent/: agent.py
refs/ep2-ai-agent-bake-off/agents/spending_snapshot_agent/: pyproject.toml
refs/ep2-ai-agent-bake-off/agents/spending_snapshot_agent/spending_snapshot_agent/: agent.py  cymbal_agent_wrapper.py
refs/ep2-ai-agent-bake-off/frontend/: package-lock.json  package.json
refs/ep2-ai-agent-bake-off/frontend/app/: globals.css  layout.tsx  page.tsx
refs/planning/: adk_server.md  ai_agent_bake_off.md  initial_rough_plan.md  master_plan.md  todo.md
(+36 files in other folders)
